@@ -1,0 +1,82 @@
+array(
+    'system' => array(
+        'total' => 'column=total;type=integer',
+    ),
+    'currencies' => array(
+        'id' => 'column=currencies_id;type=integer;key=true;auto=true',
+        'title' => 'column=title;type=string',
+        'code' => 'column=code;type=string',
+        'symbolLeft' => 'column=symbol_left;type=string',
+        'symbolRight' => 'column=symbol_right;type=string',
+        'decimalPoint' => 'column=decimal_point;type=string',
+        'thousandsPoint' => 'column=thousands_point;type=string',
+        'decimalPlaces' => 'column=decimal_places;type=string',
+        'rate' => 'column=value;type=float',
+        'lastUpdate' => 'column=last_updated;type=datetime',
+    ),
+    'categories' => array(
+        'id' => 'column=categories_id;type=integer;key=true;auto=true',
+        'image' => 'column=categories_image;type=string',
+        'parentId' => 'column=parent_id;type=integer',
+        'sortOrder' => 'column=sort_order;type=integer',
+        'dateAdded' => 'column=date_added;type=datetime',
+        'lastModified' => 'column=last_modified;type=datetime',
+        'active' => 'column=categories_status;type=integer',
+    ),
+    'categories_description' => array(
+        'id' => 'column=categories_id;type=integer;key=true',
+        'languageId' => 'column=language_id;type=integer;key=true',
+        'name' => 'column=categories_name;type=string',
+        'description' => 'column=categories_description;type=string',
+    ),
+    'products_to_categories' => array(
+        'productId' => 'column=products_id;type=integer;key=true',
+        'categoryId' => 'column=categories_id;type=integer;key=true',
+    ),
+    'manufacturers' => array(
+        'id' => 'column=manufacturers_id;type=integer;key=true;auto=true',
+        'name' => 'column=manufacturers_name;type=string',
+        'image' => 'column=manufacturers_image;type=string',
+        //'dateAdded' => 'column=date_added;type=datetime',
+        //'lastModified' => 'column=last_modified;type=datetime',
+    ),
+    'manufacturers_info' => array(
+        'id' => 'column=manufacturers_id;type=integer;key=true',
+        'languageId' => 'column=languages_id;type=integer;key=true',
+        'url' => 'column=manufacturers_url;type=string',
+        'lastClick' => 'column=date_last_click;type=datetime',
+    ),
+    'customers' => array(
+        'id' => 'column=customers_id;type=integer;key=true;auto=true',
+        'gender' => 'column=customers_gender;type=string',
+        'firstName' => 'column=customers_firstname;type=string',
+        'lastName' => 'column=customers_lastname;type=string',
+        'dob' => 'column=customers_dob;type=date',
+        'emailFormat' => 'column=customers_email_format;type=string',
+        'email' => 'column=customers_email_address;type=string',
+        'nickName' => 'column=customers_nick;type=string',
+        'defaultAddressId' => 'column=customers_default_address_id;type=integer',
+        'phone' => 'column=customers_telephone;type=string',
+        'fax' => 'column=customers_fax;type=string',
+        'password' => 'column=customers_password;type=string',
+        'newsletterSubscriber' => 'column=customers_newsletter;type=string',
+        'priceGroupId' => 'column=customers_group_pricing;type=integer',
+        'authorization' => 'column=customers_authorization;type=integer',
+        'referral' => 'column=customers_referral;type=string',
+        //'paypalPayerId' => 'column=customers_paypal_payerid;type=string',
+        //'paypalEc' => 'column=customers_paypal_ec;type=integer',
+    ),
+    'customers_info' => array(
+        'id' => 'column=customers_info_id;type=integer;key=true',
+        //'lastLogonDate' => 'column=customers_info_date_of_last_logon;type=datetime',
+        //'numberOfLogons' => 'column=customers_info_number_of_logons;type=integer',
+        //'accountCreateDate' => 'column=customers_info_date_account_created;type=datetime',
+        //'lastModifiedDate' => 'column=customers_info_date_account_last_modified;type=datetime',
+        'globalProductSubscriber' => 'column=global_product_notifications;type=integer',
+    ),
+    'products_notifications' => array(
+        'productId' => 'column=products_id;type=integer;key=true',
+        'accountId' => 'column=customers_id;type=integer;key=true',
+        //'dateAdded' => 'column=date_added;type=datetime',
+    ),
+);
