@@ -73,9 +73,8 @@ class ZMDateRule extends ZMRule {
      * @return boolean <code>true</code> if the value for <code>$name</code> is valid, <code>false</code> if not.
      */
     function validate($req) {
-        $da = ZMTools::parseDate($req[$this->getName()], $this->getFormat());
-
-        return empty($req[$this->getName()]) || @checkdate($da[1], $da[0], $da[2].$da[3]);
+        $da = ZMTools::parseDateString($req[$this->getName()], $this->getFormat());
+        return empty($req[$this->getName()]) || @checkdate($da['mm'], $da['dd'], $da['cc'].$da['yy']);
     }
 
 
