@@ -78,9 +78,11 @@ class ProductGroupPricing extends ZMModel {
         $this->discount_ = ZMRequest::getParameter('discount', '0');
         $this->type_ = ZMRequest::getParameter('type', '%');
         $this->regularPriceOnly_ = ZMRequest::getParameter('regularPriceOnly');
-        $this->startDate_ = ZMRequest::getParameter('startDate');
-        $this->startDate_ = ZMTools::ui2date(empty($this->startDate_) ? date(DATE_FORMAT) : $this->startDate_);
-        $this->endDate_ = ZMTools::ui2date(ZMRequest::getParameter('endDate'));
+        $startDate = ZMRequest::getParameter('startDate');
+        // default to current date
+        $startDate = empty($startDate) ? date(UI_DATE_FORMAT) : $startDate; 
+        $this->startDate_ = ZMTools::translateDateString($startDate, UI_DATE_FORMAT, ZM_DATE_FORMAT);
+        $this->endDate_ = ZMTools::translateDateString(ZMRequest::getParameter('endDate'), UI_DATE_FORMAT, ZM_DATE_FORMAT);
     }
 
 
